# aberration

./: Cargo.toml  Makefile  camera.lua  color.lua  draw.lua  entity.lua  level1.txt  main.lua  map.lua  player.lua  shader.lua  snip.lua  transform.lua  utils.lua  vec2.lua
.cargo/: config.toml
assets/: Sprite-0001.ase  crystal1.ase  iso_tileset.ase  iso_tileset.json  iso_tileset2.tsx  player.ase  player.json  tilemap1.tmx  tileset.ase
assets/tiled/: test.tiled-session
assets/unused/: iso_tileset.tsx
game_docmuent/: Art.md  Audio.md  Concept.md  Development_Timeline.md  Game Pitch.md  Game_Experience.md  Gameplay_Overiview.md  Genre.md  Inspiration.md  Platform.md  Player_Expirance.md  Software.md  Target_Audiance.md  game_document.md  inspiration.canvas  tilemap.md
game_docmuent/.obsidian/: appearance.json  community-plugins.json  daily-notes.json  graph.json  hotkeys.json  workspace.json
game_docmuent/.obsidian/plugins/3d-graph/: data.json
game_docmuent/.obsidian/plugins/colored-tags/: data.json
game_docmuent/.obsidian/plugins/excalibrain/: data.json
shaders/: distortion.glsl  tile_shader.glsl
src/: animation.rs  args.rs  camera.rs  egui_setup.rs  helpers.rs  macros.rs  main.rs  opts.rs  player.rs  tileset.rs  velocity.rs
src/shared/: animation.rs  consts.rs  inventory.rs  item.rs  mod.rs  velocity.rs
